--- a/index.html
+++ b/index.html
@@ -5,9 +5,9 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>yummy</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor" crossorigin="anonymous">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href='https://unpkg.com/boxicons@2.1.2/css/boxicons.min.css' rel='stylesheet'>
-    <link rel="stylesheet" href="css\index-style.css">
+    <link rel="stylesheet" href="css/index-style.css">
     <link rel="stylesheet" href="css/nav-style.css">
 </head>
 <body>
@@ -18,35 +18,47 @@
       </div>
       <img class="logo" src="img/logo.png">
       <div class="menu" id="menuID">
-        <a href="#" onclick="location.href='spring.html'" class="item">봄</a>
-        <a href="#" onclick="location.href='summer.html'" class="item">여름</a>
-        <a href="#" onclick="location.href='fall.html'" class="item">가을</a>
-        <a href="#" onclick="location.href='winter.html'" class="item">겨울</a>
+        <ul class = "nav-list">
+            <li><a href="#" onclick="location.href='spring.html'" class="item">봄</a></li>
+            <li><a href="#" onclick="location.href='summer.html'" class="item">여름</a></li>
+            <li><a href="#" onclick="location.href='fall.html'" class="item">가을</a></li>
+            <li><a href="#" onclick="location.href='winter.html'" class="item">겨울</a></li>
+        </ul>
       </div>
     </nav>
     <div class="middle">
       <div class="slideshow">
-        <div id="carouselExampleIndicators" class="carousel slide" data-bs-ride="true">
+        <!-- Carousel -->
+        <div id="demo" class="carousel slide" data-bs-ride="carousel">
+          <!-- Indicators/dots -->
           <div class="carousel-indicators">
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1" aria-label="Slide 2"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2" aria-label="Slide 3"></button>
-            <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="3" aria-label="Slide 4"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="0" class="active"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="1"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="2"></button>
+            <button type="button" data-bs-target="#demo" data-bs-slide-to="3"></button>
           </div>
+          <!-- The slideshow/carousel -->
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img src="img/spring.jpg" class="d-block w-100">
+              <img src="img/spring.jpg" alt="Los Angeles" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/summer.jpg" class="d-block w-100">
+              <img src="img/summer.jpg" alt="Chicago" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/fall.jpg" class="d-block w-100">
+              <img src="img/fall.jpg" alt="New York" class="d-block w-100">
             </div>
             <div class="carousel-item">
-              <img src="img/winter.jpg" class="d-block w-100">
+              <img src="img/winter.jpg" alt="New York" class="d-block w-100">
             </div>
           </div>
+          <!-- Left and right controls/icons -->
+          <button class="carousel-control-prev" type="button" data-bs-target="#demo" data-bs-slide="prev">
+            <span class="carousel-control-prev-icon"></span>
+          </button>
+          <button class="carousel-control-next" type="button" data-bs-target="#demo" data-bs-slide="next">
+            <span class="carousel-control-next-icon"></span>
+          </button>
         </div>
       </div>
       <main id="mainCardID">
@@ -73,13 +85,14 @@
         </article>
       </main>
     </div>
-  <footer>
-      <div class="left">
-        <p>Creaters: 이혜령, 안소영<br/>
-        address: w2108@e-mirim.hs.kr, w2105@e-mirim.hs.kr
-        </p>
-      </div>
-  </footer>
+    <footer>
+        <div class="left">
+          <p>Creaters: 이혜령, 안소영<br/>
+          address: w2108@e-mirim.hs.kr, w2105@e-mirim.hs.kr
+          </p>
+        </div>
+    </footer>
+  </div>
   <script src="JS/main.js"></script>
 </body>
 </html>
